--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,27 @@
     {
       "type": "chrome",
       "request": "launch",
-      "name": "Nuxtjs: Launch Chrome",
-      "url": "http://localhost:3000",
+      "name": "client: chrome",
+      "url": "http://localhost:3000/schedule",
       "webRoot": "${workspaceFolder}"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "server: nuxt",
+      "program": "${workspaceFolder}/node_modules/nuxi/bin/nuxi.mjs",
+      "args": [
+        "dev"
+      ],
+    }
+  ],
+  "compounds": [
+    {
+      "name": "fullstack: nuxt",
+      "configurations": [
+        "server: nuxt",
+        "client: chrome"
+      ]
     }
   ]
 }
