api処理をserverに移動、ログ出力処理を修正

--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "nuxt": "^3.4.3"
   },
   "dependencies": {
-    "dayjs": "^1.11.7",
-    "loglevel": "^1.8.1"
+    "dayjs": "^1.11.7"
   }
 }
